# virtual_light_entity_for_IR

./: .gitignore  DockerFile  Dockerfile  HA.configuration.yaml.sample  LICENSE  Readme.md  compose.yml  pyproject.toml  settings.sample.json
.github/workflows/: test.yml
tests/: test_edge_cases.py  test_ir_sender.py  test_main.py
tests/integration/: conftest.py  test_mqtt_integration.py
virtual_light_entity_for_IR/: config.py  homeassistant.py  ir_sender.py  light_controller.py  main.py  mqtt.py
virtual_light_entity_for_IR/plugins/: __init__.py
virtual_light_entity_for_IR/plugins/auto_mode/: __init__.py
