[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virtual-light-entity-for-ir"
version = "0.1.0"
description = "Virtual light entity for infrared control with Home Assistant integration"
authors = [{name = "huruya2100"}]
readme = "Readme.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "paho-mqtt",
    "requests",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "mypy>=1.14.1",
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "ruff>=0.14.6",
]

[project.scripts]
virtual-light = "virtual_light_entity_for_IR.main:main"
