[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virtual-light-entity-for-ir"
version = "0.1.0"
description = "Virtual light entity for infrared control with Home Assistant integration"
authors = [{name = "huruya2100"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "paho-mqtt",
    "requests",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring a running MQTT broker (localhost:1883)",
]

[tool.hatch.build.targets.wheel]
packages = ["virtual_light_entity_for_IR"]

[project.scripts]
virtual-light = "virtual_light_entity_for_IR.main:main"

[tool.hatch.build.targets.wheel]
packages = ["virtual_light_entity_for_IR"]
